# soma

./: .gitignore  .mcp.json  00_ROADMAP.md  01_CORE_REFACTORING.md  02_SYNAPTIC_PROTOCOL.md  03_PLUGINS.md  04_HELPERBOOK.md  05_PLUGIN_CATALOG.md  06_INTERFACE_SOMA.md  07_SYNTHESIZER.md  08_DEVELOPER_GUIDE.md  09_CONVERSATIONAL_INTERACTION.md  CLAUDE.md  LICENSE  README.md  SOMA_Whitepaper.md  discussion.md  export_onnx.py
docs/: ltc-sdm.md  (+39 more)
soma-core/: Cargo.toml  README.md  soma.toml.example
soma-core/checkpoints/: soma-m4.local-1775544835.ckpt  soma-m4.local-1775545578.ckpt
soma-core/src/: errors.rs  main.rs
soma-core/src/config/: mod.rs
soma-core/src/mcp/: auth.rs  mod.rs  server.rs  tools.rs
soma-core/src/memory/: checkpoint.rs  consolidation.rs  experience.rs  mod.rs
soma-core/src/metrics/: mod.rs
soma-core/src/mind/: adaptation.rs  engine.rs  lora.rs  mod.rs  onnx_engine.rs  reflex.rs  tokenizer.rs
soma-core/src/plugin/: builtin.rs  dynamic.rs  interface.rs  manager.rs  mod.rs  process.rs
soma-core/src/proprioception/: mod.rs
soma-core/src/protocol/: chunked.rs  client.rs  codec.rs  connection.rs  discovery.rs  encryption.rs  mod.rs  offline_queue.rs  pubsub.rs  rate_limit.rs  relay.rs  router.rs  server.rs  signal.rs  streaming.rs  unix_socket.rs  websocket.rs
soma-core/src/state/: decision_log.rs  execution_history.rs  mod.rs
soma-next/: .gitignore  CLAUDE.md  Cargo.toml  README.md  soma.toml.example
soma-next/docs/: distributed.md  pack-spec.md  port-spec.md  skill-spec.md
soma-next/packs/reference/: manifest.json
soma-next/src/: adapters.rs  bootstrap.rs  config.rs  errors.rs  lib.rs  main.rs
soma-next/src/distributed/: auth.rs  chunked.rs  delegation.rs  discovery.rs  heartbeat.rs  mod.rs  peer.rs  queue.rs  rate_limit.rs  remote.rs  routing.rs  streaming.rs  sync.rs  trace.rs  transport.rs  unix_transport.rs  webhook_listener.rs  ws_transport.rs
soma-next/src/interfaces/: api.rs  cli.rs  goal_utils.rs  mcp.rs  mcp_ws.rs  mod.rs
soma-next/src/memory/: checkpoint.rs  embedder.rs  episodes.rs  mod.rs  persistence.rs  routines.rs  schemas.rs  sequence_mining.rs  skill_stats.rs  working.rs  world.rs
soma-next/tests/: distributed_e2e.sh
soma-plugins/auth/: Cargo.toml  manifest.json
soma-plugins/crypto/: Cargo.toml  manifest.json
soma-plugins/http-bridge/: Cargo.toml  manifest.json
soma-plugins/postgres/: Cargo.toml  manifest.json
soma-plugins/push/: Cargo.toml  manifest.json
soma-plugins/redis/: Cargo.toml  manifest.json
soma-plugins/smtp/: Cargo.toml  manifest.json
soma-ports/: CLAUDE.md  Cargo.toml  README.md
soma-ports/assemblyai/: Cargo.toml
soma-ports/auth/: Cargo.toml  README.md  manifest.json
soma-ports/calendar/: Cargo.toml  README.md
soma-ports/crypto/: Cargo.toml  README.md  manifest.json
soma-ports/deepgram/: Cargo.toml  manifest.json
soma-ports/elasticsearch/: Cargo.toml  README.md  manifest.json
soma-ports/geo/: Cargo.toml  README.md  manifest.json
soma-ports/git/: Cargo.toml
soma-ports/github/: Cargo.toml  README.md  manifest.json
soma-ports/glm/: Cargo.toml
soma-ports/google-calendar/: Cargo.toml  README.md  manifest.json
soma-ports/google-drive/: Cargo.toml  README.md  manifest.json
soma-ports/google-mail/: Cargo.toml  README.md
soma-ports/gridworld/: Cargo.toml  manifest.json
soma-ports/http/: manifest.json
soma-ports/image/: Cargo.toml  README.md  manifest.json
soma-ports/kimi/: Cargo.toml
soma-ports/kitchen/: Cargo.toml  manifest.json
soma-ports/mercury/: Cargo.toml  manifest.json
soma-ports/mongodb/: Cargo.toml  README.md
soma-ports/mysql/: Cargo.toml  README.md
soma-ports/patch/: Cargo.toml
soma-ports/pdf/: Cargo.toml  README.md
soma-ports/postgres/: Cargo.toml  README.md  manifest.json
soma-ports/push/: Cargo.toml  README.md  manifest.json
soma-ports/redis/: Cargo.toml  README.md  manifest.json
soma-ports/runner/: Cargo.toml
soma-ports/s3/: Cargo.toml  README.md  manifest.json
soma-ports/sdk/: Cargo.toml  README.md
soma-ports/search/: Cargo.toml  manifest.json
soma-ports/slack/: Cargo.toml  README.md  manifest.json
soma-ports/smtp/: Cargo.toml  README.md  manifest.json
soma-ports/sqlite/: Cargo.toml
soma-ports/stripe/: Cargo.toml  README.md
soma-ports/timer/: Cargo.toml  README.md  manifest.json
soma-ports/towerdefence/: Cargo.toml
soma-ports/twilio/: Cargo.toml  README.md
soma-ports/youtube/: Cargo.toml  manifest.json
soma-project-autonomy/: Cargo.toml
soma-project-autonomy/src/: main.rs
soma-project-esp32/: .gitignore  Cargo.toml  GETTING_STARTED.md  README.md
soma-project-esp32/firmware/: Cargo.toml  appdesc.x  build.rs
soma-project-esp32/leaf/: Cargo.toml
soma-project-esp32/scripts/: boards.sh  build.sh  cycle.sh  devices.env  flash.sh  lib.sh  monitor.sh  setup.sh  test.sh  thermistor-to-display.py  wifi-connect.py  wifi-connect.sh  wifi-scan.py  wifi-scan.sh  wire-test.py
soma-project-inference/: Cargo.toml
soma-project-inference/src/: main.rs  real.rs
soma-project-kitchen/: .gitignore  Cargo.toml  README.md
soma-project-kitchen/editor/: package.json  server.js
soma-project-kitchen/scenarios/: organize.json
soma-project-kitchen/src/: lib.rs  run.rs  session.rs  world.rs
soma-project-mercury/: .gitignore  Cargo.toml  index.js  package.json
soma-project-mercury/lib/: brains.js  engine.js
soma-project-mercury/src/: main.rs
soma-project-minigrid/: .gitignore  Cargo.toml  README.md
soma-project-minigrid/editor/: package.json  server.js
soma-project-minigrid/src/: lib.rs  main.rs  run.rs  session.rs  vis.rs  world.rs
soma-project-minigrid/worlds/: custom_world_25x25.json
soma-project-multistep/: .gitignore  Cargo.toml  README.md
soma-project-multistep/src/: main.rs
soma-synthesizer/: README.md  pyproject.toml
soma-synthesizer/soma_synthesizer/: __init__.py  augmentor.py  cli.py  config.py  data.py  exporter.py  lora.py  model.py  tokenizer.py  trainer.py  validator.py
soma-synthesizer/soma_synthesizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+598 files in other folders)
