[package]
name = "soma"
version = "0.1.0"
edition = "2024"
description = "SOMA: Neural mind generates programs, drives hardware directly"

[dependencies]
# ONNX inference (pure Rust, no C++ deps)
tract-onnx = "0.21"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging + observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Trace IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"
thiserror = "2"

# System operations
libc = "0.2"

# Signal handling
ctrlc = "3"

# Configuration
toml = "0.8"

# Concurrent maps
dashmap = "6"

# Synaptic Protocol v2 binary wire format
crc32fast = "1"
bitflags = "2"
rmp-serde = "1"

# SHA-256 for chunked transfer verification
sha2 = "0.10"

# Signal compression (Spec Section 19)
zstd = "0.13"

[profile.release]
opt-level = 3
lto = true
strip = true
