[package]
name = "soma-next"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "soma"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "net", "io-util", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
dashmap = "6"
toml = "0.8"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
libloading = "0.8"
tokio-tungstenite = "0.24"
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["std"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
libc = "0.2"
