[package]
name = "soma-project-autonomy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prove-autonomy"
path = "src/main.rs"

[dependencies]
soma-next = { path = "../soma-next" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
