[package]
name = "soma-project-minigrid"
version = "0.1.0"
edition = "2024"

[lib]
name = "minigrid"
path = "src/lib.rs"

[[bin]]
name = "run-minigrid"
path = "src/run.rs"

[dependencies]
soma-next = { path = "../soma-next" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["gif", "png"] }
