[package]
name = "soma-plugin-auth"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-plugin-sdk = { path = "../sdk" }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
