[package]
name = "soma-plugin-crypto"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-plugin-sdk = { path = "../sdk" }
sha2 = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
hmac = "0.12"
serde_json = "1"
