[package]
name = "soma-plugin-http-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-plugin-sdk = { path = "../sdk" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
serde_json = "1"
