[package]
name = "soma-plugin-postgres"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-plugin-sdk = { path = "../sdk" }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
serde_json = "1"
native-tls = "0.2"
postgres-native-tls = "0.5"
