[package]
name = "soma-plugin-postgres"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-plugin-sdk = { path = "../sdk" }
postgres = { version = "0.19", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
serde_json = "1"
uuid = "1"
chrono = "0.4"
