[package]
name = "soma-plugin-redis"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-plugin-sdk = { path = "../sdk" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
serde_json = "1"
