[package]
name = "soma-port-auth"
version = "0.1.0"
edition = "2024"
description = "SOMA port pack for authentication: OTP, sessions, TOTP, tokens"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-port-sdk = { path = "../sdk" }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
semver = { version = "1", features = ["serde"] }
