[package]
name = "soma-port-calendar"
version = "0.1.0"
edition = "2024"
description = "SOMA port pack for local iCalendar (.ics) file management"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-port-sdk = { path = "../sdk" }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
