[package]
name = "soma-port-crypto"
version = "0.1.0"
edition = "2024"
description = "SOMA port pack for cryptographic operations"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-port-sdk = { path = "../sdk" }
sha2 = "0.10"
hmac = "0.12"
bcrypt = "0.16"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
jsonwebtoken = "9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
