[package]
name = "soma-port-geo"
version = "0.1.0"
edition = "2024"
description = "SOMA port pack for geolocation: distance, filtering, geocoding"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-port-sdk = { path = "../sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
