[package]
name = "soma-port-github"
version = "0.1.0"
edition = "2024"
description = "SOMA port pack: GitHub API (issues, pull requests, repository files, branches)"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-port-sdk = { path = "../sdk" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
base64 = "0.22"
