[package]
name = "soma-port-google-drive"
version = "0.1.0"
edition = "2024"
description = "SOMA port: Google Drive API (list, get, upload, delete files, create folders)"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-port-sdk = { path = "../sdk" }
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde_json = "1"
