[package]
name = "soma-port-google-mail"
version = "0.1.0"
edition = "2024"
description = "SOMA port: Gmail API (send email, list/get messages, list labels)"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-port-sdk = { path = "../sdk" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
base64 = "0.22"
