[package]
name = "soma-port-image"
version = "0.1.0"
edition = "2024"
description = "SOMA port pack: image processing (thumbnail, resize, crop, format conversion, EXIF stripping)"

[lib]
crate-type = ["cdylib"]

[dependencies]
soma-port-sdk = { path = "../sdk" }
image = "0.25"
base64 = "0.22"
serde_json = "1"
